# seattle-schools

./: .gitignore  Justfile  README.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml
docs/: building_rankings.md  data_sources.md  index.md  school_regions.md
docs/.observablehq/: deploy.json
docs/data/: sps-elementary-schools-clean.csv  sps-elementary-schools.csv  sps-elementary-schools.csv.py
docs/data/geo/: Elementary_School_Attendance_Areas_2023-2024.geojson  Middle_School_Attendance_Areas_2023-2024.geojson
