[project]
name = "seattle-schools"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "jupyterlab>=4.2.1",
    "jupytext>=1.16.2",
    "jupysql>=0.10.10",
    "duckdb>=1.0.0",
    "duckdb-engine>=0.13.0",
    "seaborn>=0.13.2",
    "polars>=0.20.31",
    "pandas>=2.2.2",
]
readme = "README.md"

[tool.pixi.project]
version = "0.1.0"
description = "Analysis of SPS Elementary Well-Resourced Schools"
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
nodejs = ">=20.12.2,<20.13"
